Fixing the height of the panel accordingly. Its too much down below with empty space

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -66,13 +66,17 @@ header nav .tab-item {
   left: 0;
   top: var(--nav-height);
   width: 100vw;
-  height: 25rem;
+  height: 20rem;
   flex-direction: row;
   box-shadow: 0 4px 2px -2px rgba(0 0 0 / 20%);
 }
 
 header nav .tab-item:has(.veiculos-highlight-wrapper) {
   height: 40rem;
+}
+
+header nav .tab-item:has(.hamburger) {
+  height: 25rem;
 }
 
 header nav .tab-item > div {
